<resources>
    <string name="app_name">نام اپلیکیشن</string>

    <!--bottom nav items-->
    <string name="title_home">صفحه اصلی</string>
    <string name="title_category">دسته بندی ها</string>
    <!--nav drawer items-->
    <string name="title_username">نام کاربر</string>
    <string name="title_profile">پروفایل</string>
    <string name="title_aboutus">درباره ما</string>
    <string name="title_calltous">تماس با ما</string>


    <string name="fragment_category">دسته بندی ها</string>
    <string name="hint_name">نام</string>
    <string name="hint_lastname">نام خانوداگی</string>
    <string name="hint_email">ایمیل</string>
    <string name="hint_enter">ورود</string>
    <string name="hint_cancel">انصراف</string>

    <string name="title_contactus">تماس با ما</string>
    <string name="hint_enter_your_first_name">نام را وارد کنید</string>
    <string name="hint_enter_your_last_name">نام خانوادگی را وارد کنید</string>
    <string name="title_submit">ثبت</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_users">کاربران</string>


</resources>
